# bing-wallpaper-service

./: Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: docker-publish.yml
src/: main.rs
